--- a/alerts.html
+++ b/alerts.html
@@ -27,7 +27,7 @@
       <div class="content">
   <!-- Header -->
   <div class="header">
-      <p> CityPulse Dynamics Alerts Dashboard </p>
+      <div class="pgtitle"><p> CityPulse Dynamics Alerts Dashboard </p></div><div class="logo"><img class="logoimg" src=assets/logo.png alt="CityPulse Dynamics Logo Image" /></div>
   </div>
   <!-- Main Content -->
   <div>
