--- a/feeds.html
+++ b/feeds.html
@@ -66,14 +66,14 @@
       <div class="content">
   <!-- Header -->
   <div class="header">
-      <p> CityPulse Dynamics Live Feed Dashboard </p>
+      <div class="pgtitle"><p> CityPulse Dynamics Camera Feeds </p></div><div class="logo"><img class="logoimg" src=assets/logo.png alt="CityPulse Dynamics Logo Image" /></div>
   </div>
   <!-- Camera Feeds -->
-  <div class="feeds">
-    <a href="https://itscameras.dot.state.oh.us/images/CMH/CMH061c.jpg"><img class="feedmain" src="https://itscameras.dot.state.oh.us/images/CMH/CMH061c.jpg" alt="Interstate 270 and Interstate 161 Live Camera Feed"></a>
-      <a href="https://itscameras.dot.state.oh.us/images/CMH/SR-161_at_Little_Turtle_Way.jpg"><img class="feedmain" src="https://itscameras.dot.state.oh.us/images/CMH/SR-161_at_Little_Turtle_Way.jpg" alt="Interstate 161 at Little Turtle Way live camera feed"></a>
-    <a href="https://itscameras.dot.state.oh.us:443/images/CMH/SR-161_at_Hamilton_Rd.jpg"><img class="feedmain" src="https://itscameras.dot.state.oh.us:443/images/CMH/SR-161_at_Hamilton_Rd.jpg" alt="Interstate 161 and Hamilton Road live camera feed"></a>
-    <a href="https://itscameras.dot.state.oh.us:443/images/CCTV_Trailer_5.jpg"><img class=feedmain src="https://itscameras.dot.state.oh.us:443/images/CCTV_Trailer_5.jpg" alt="Interstate 161 and State Route 62 live camera feed"></a>
+  <div class="feedspg">
+      <a href="https://itscameras.dot.state.oh.us/images/CMH/CMH061c.jpg"><div class="lgfeedlnk" "first"><img class="feedthumb" src="https://itscameras.dot.state.oh.us/images/CMH/CMH061c.jpg" alt="Interstate 270 and Interstate 161 Live Camera Feed"><p class="feedtitle">Interstate 270 and Interstate 161</p></div></a>
+      <div class="lgfeedlnk" "second"><a href="https://itscameras.dot.state.oh.us/images/CMH/SR-161_at_Little_Turtle_Way.jpg"><img class="feedthumb" src="https://itscameras.dot.state.oh.us/images/CMH/SR-161_at_Little_Turtle_Way.jpg" alt="Interstate 161 at Little Turtle Way live camera feed"></a><p class="feedtitle">Interstate 161 and Little Turtle Way</p></div>
+    <div class="lgfeedlnk" "third"><a href="https://itscameras.dot.state.oh.us:443/images/CMH/SR-161_at_Hamilton_Rd.jpg"><img class="feedthumb" src="https://itscameras.dot.state.oh.us:443/images/CMH/SR-161_at_Hamilton_Rd.jpg" alt="Interstate 161 and Hamilton Road live camera feed"></a><p class="feedtitle">Interstate 161 and Hamilton Road</p></div>
+    <div class="lgfeedlnk" "fourth"><a href="https://itscameras.dot.state.oh.us:443/images/CCTV_Trailer_5.jpg"><img class=feedthumb src="https://itscameras.dot.state.oh.us:443/images/CCTV_Trailer_5.jpg" alt="Interstate 161 and State Route 62 live camera feed"></a><p class="feedtitle">Interstate 161 and State Route 62</p></div>
   </div>
   <!-- Main Content -->
   <div>
