--- a/stats.html
+++ b/stats.html
@@ -27,12 +27,17 @@
       <div class="content">
   <!-- Header -->
   <div class="header">
-      <p> CityPulse Dynamics Statistics Dashboard </p>
+      <div class="pgtitle"><p> CityPulse Dynamics Statistics Dashboard </p></div><div class="logo"><img class="logoimg" src=assets/logo.png alt="CityPulse Dynamics Logo Image" /></div>
   </div>
   <!-- Main Content -->
-  <div>
-      
-  </div>
+  <table class="statistics">
+      <tr>
+          <td><p>Total Traffic Events</p></td> <td><p>Car Throughput</p></td>
+      </tr>
+      <tr>
+          <td><p>Major Slowdowns: 2</p></td> <td><p>350 per hour</p></td>
+      </tr>
+  </table>
       </div>
   <!-- Close top-level container -->
   </div>
