--- a/alerts.html
+++ b/alerts.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- Code syntax referenced from https://html.spec.whatwg.org/ -->
- <head>
-     <title>CityPulse Dynamics SCMS</title>
-     <link rel="stylesheet" href="styles.css">
-     <!-- Responsive Viewport -->
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta charset="utf-8" />
+<head>
+    <title>CityPulse Dynamics SCMS</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Responsive Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
      
-     <script>
+    <script>
 
     </script>
- </head>
- <body>
-  <!-- Top Level Container -->
-  <div>
-  <!-- Sidebar Menu -->
-  <div class="sidenav" style="z-index:1">
-    <nav id="Main_Menu">
-        <a href="main.html">Home</a>
-        <a href="feeds.html">Camera Feeds</a>
-        <a href="stats.html">Statistics</a>
-        <a href="alerts.html">Alerts</a>
-    </nav>
-  </div>
-      <div class="content">
-  <!-- Header -->
-  <div class="header">
-      <div class="pgtitle"><p> CityPulse Dynamics Alerts Dashboard </p></div><div class="logo"><img class="logoimg" src=assets/logo.png alt="CityPulse Dynamics Logo Image" /></div>
-  </div>
-  <!-- Main Content -->
-  <div>
-  </div>
-      </div>
+</head>
+<body>
+    <!-- Top Level Container -->
+    <div>
+        <!-- Sidebar Menu -->
+        <div class="sidenav" style="z-index:1">
+            <nav id="Main_Menu">
+                <a href="main.html">Home</a>
+                <a href="feeds.html">Camera Feeds</a>
+                <a href="stats.html">Statistics</a>
+                <a href="alerts.html">Alerts</a>
+            </nav>
+        </div>
+    <div class="content">
+        <!-- Header -->
+        <div class="header">
+            <div class="pgtitle"><p> CityPulse Dynamics Alerts Dashboard </p></div><div class="logo"><img class="logoimg" src=assets/logo.png alt="CityPulse Dynamics Logo Image" />
+        </div>
+        </div>
+        <!-- Main Content -->
+        <div>
+            <!-- NOTE: This would be a code snippet to pull in actual alerts based on sensor data -->
+            <p class="alert">No alerts at this time.</p>
+        </div>
+    </div>
   <!-- Close top-level container -->
   </div>
  </body>
